# notice-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  ruff.toml
docker_compose/: mongo-express.yaml  mongo.yaml
src/application/base/: command.py  exception.py
src/application/command/folder/: create_folder.py  exception.py
src/composition/container/: main_container.py
src/composition/mediator/: command_mediator.py  exception.py  main_mediator.py
src/config/: settings.py
src/domain/base/: __init__.py  entity.py  exception.py  value_object.py
src/domain/folder/: entity.py  exception.py  repository.py  value_object.py
src/infrastructure/repository/folder/: mongo.py
src/internal/repository/base/: mongo.py
src/presentation/api/: main.py  schema.py
src/presentation/api/folder/: handler.py  schema.py
